# homework_February

./: .flake8  .gitignore  README.MD  main.py  pyproject.toml
src/: .flake8  main.py
src/models/: category.py  product.py
tests/: test_category.py  test_product.py
